# datascipsych

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: deploy-book.yml  main.yml
assignments/assignment1/: python_intro.py
assignments/assignment10/: assignment10.ipynb  data_visualization.ipynb
assignments/assignment11/: assignment11.ipynb  inferential_statistics.ipynb
assignments/assignment12/: assignment12.ipynb  reporting.ipynb
assignments/assignment13/: assignment13.ipynb  coding_best_practices.ipynb
assignments/assignment14/: assignment14.ipynb  project_iteration.ipynb
assignments/assignment2/: answers.md  task-recognition_beh.json
assignments/assignment3/: assignment3.ipynb  python_basics.ipynb  python_basics.slides.html  python_flow.ipynb  python_functions.ipynb  python_variables.ipynb  review.ipynb
assignments/assignment4/: assignment4.ipynb  python_flow.ipynb  python_functions.ipynb
assignments/assignment5/: assignment5.ipynb  descriptive_stats.ipynb  python_science.ipynb
assignments/assignment6/: assignment6.ipynb  dataframes.ipynb  descriptive_stats.ipynb
assignments/assignment7/: assignment7.ipynb  dataframes.ipynb  dataframes_copy.ipynb  exp1_trimmed.csv  midterm_review.ipynb
assignments/assignment8/: assignment8.ipynb  data_cleaning.ipynb  python_packages.ipynb  seaborn.ipynb
assignments/assignment9/: assignment9.ipynb  data_cleaning.ipynb  study.csv
assignments/midterm_review/: midterm_assignment.ipynb  midterm_review.ipynb  midterm_review_030525.ipynb
book/: _config.yml  _toc.yml  intro.md  myst.yml  requirements.txt
chapters/chapter1/: assignment1.ipynb  python_variables.ipynb  review.ipynb  review_r.ipynb  variables.ipynb
chapters/chapter10/: assignment10.ipynb  inferential_statistics.ipynb  review.ipynb
(+63 files in other folders)
