[project]
name = "datascipsych"
version = "0.1.0"
description = "Code for the Data Science for Psychology course."
authors = [
    {name = "Neal W Morton", email = "mortonne@gmail.com"}
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "polars",
    "pyarrow",
    "seaborn",
    "pingouin",
    "pillow",
    "click",
    "jupyterlab",
    "jupyterlab_rise"
]

[project.gui-scripts]
hello = "datascipsych:cli.hello"
hello-click = "datascipsych:cli.hello_click"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
